--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
     <section id="download" class="download-section content-section text-center">
       <div class="container">
         <div class="col-lg-8 mx-auto">
-
+          <h2>stuff</h2>
+          <p>st</p>
+          <p>st</p>
+          <p>st</p>
         </div>
       </div>
     </section>
