--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </p>
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
-                <a href="documents/Lella_ECE_New_grad.pdf" class="btn btn-default btn-lg">
+                <a href="../documents/Lella_ECE_New_grad.pdf" class="btn btn-default btn-lg">
                   <i class="fa fa-file-pdf-o fa-fw"></i>
                   <span class="network-name">Resume</span>
                 </a>
