adding more tabs

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+              <a class="nav-link js-scroll-trigger" href="../photography.html">Photography</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#download">Download</a>
+              <a class="nav-link js-scroll-trigger" href="../projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -72,14 +72,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>About Grayscale</h2>
-            <p>Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-            <p>This theme features stock photos by
-              <a href="http://gratisography.com/">Gratisography</a>
-              along with a custom Google Maps skin courtesy of
-              <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-            <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with SASS and LESS files for easy customization!</p>
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
       </div>
@@ -88,12 +82,7 @@
     <!-- Download Section -->
     <section id="download" class="download-section content-section text-center">
       <div class="container">
-        <div class="col-lg-8 mx-auto">
-          <h2>stuff</h2>
-          <p>st</p>
-          <p>st</p>
-          <p>st</p>
-        </div>
+    
       </div>
     </section>
 
@@ -109,11 +98,11 @@
             </p>
             <p>
               <i class="fa fa-envelope fa-fw"></i>
-              <a href="mailto:sunny.lella@mst.edu?Subject=Reaching%20Out" target="_top">sunny.lella@mst.edu</a>
+              <a href="mailto:sunnylella@gmail.com?Subject=Reaching%20Out" target="_top">sunnylella@gmail.com</a>
             </p>
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
-                <a href="../documents/Lella_ECE_New_grad.pdf" class="btn btn-default btn-lg">
+                <a href="../documents/Lella_Avionics_Engineer.pdf" class="btn btn-default btn-lg">
                   <i class="fa fa-file-pdf-o fa-fw"></i>
                   <span class="network-name">Resume</span>
                 </a>
@@ -135,17 +124,6 @@
         </div>
       </div>
     </section>
-
-    <!-- Map Section -->
-    <div id="map"></div>
-
-    <!-- Footer -->
-    <footer>
-      <div class="container text-center">
-        <p>Made with <a href="https://startbootstrap.com/template-overviews/grayscale/">Grayscale Framework</a></p>
-
-      </div>
-    </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
