updated path to resume

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="../photography.html">Photography</a>
+              <a class="nav-link js-scroll-trigger" href="./photography.html">Photography</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="../projects.html">Projects</a>
+              <a class="nav-link js-scroll-trigger" href="./projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -102,7 +102,7 @@
             </p>
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
-                <a href="../documents/Lella_Avionics_Engineer.pdf" class="btn btn-default btn-lg">
+                <a href="./documents/Lella_Avionics_Engineer.pdf" class="btn btn-default btn-lg">
                   <i class="fa fa-file-pdf-o fa-fw"></i>
                   <span class="network-name">Resume</span>
                 </a>
