added photo tab

--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
 <!DOCTYPE html>
+
+
+<!--
+Woah hold on there buckaroo, you trying to go hackerman and view my code? Well go ahead, I guess I can't stop you.
+
+                                     _        _   _        
+  ()                                \_|_)      | | | |       
+  /\         _  _    _  _             |     _  | | | |  __,  
+ /  \|   |  / |/ |  / |/ |  |   |    _|    |/  |/  |/  /  |  
+/(__/ \_/|_/  |  |_/  |  |_/ \_/|/  (/\___/|__/|__/|__/\_/|_/
+                               /|                            
+                               \|                            
+-->
+
 <html lang="en">
 
   <head>
@@ -37,7 +51,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="./photography.html">Photography</a>
+              <a class="nav-link js-scroll-trigger" href="./photos.html">Photos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="./videos.html">Videos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="./projects.html">Projects</a>
@@ -73,7 +90,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Young professional, electrical engineer, older brother, hobbyist, and lazy bum are some of the words you could use to describe me. But really, I'm just another person existing in the simulated world that we all share. You can look through my accomplishments if you want.</p>
           </div>
         </div>
       </div>
